k8s-manifests/k8s-registry/registry-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: docker-registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2.8
        imagePullPolicy: IfNotPresent
        ports:
        - name: registry
          containerPort: 5000
          protocol: TCP 
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry/docker
        - name: registry-vol
          mountPath: /var/lib/registry
        - name: htpasswd
          mountPath: /auth
      volumes:
      - name: storage
        emptyDir: {} 
      - name: registry-vol
        configMap:
          name: registry-configmap
          items:
          - key: registry-config.yml
            path: config.yml
      - name: htpasswd
        secret:
          secretName: registry-auth
          items:
          - key: HTPASSWD
            path: htpasswd


---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
    nodePort: 30500
