k8s-manifests/k8s-registry/registry-istio-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: docker-registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2.8.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: registry
          containerPort: 5000
          protocol: TCP 
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry/docker
        - name: registry-vol
          mountPath: /var/lib/registry
        - name: htpasswd
          mountPath: /auth
      volumes:
      - name: storage
        emptyDir: {} 
      - name: registry-vol
        configMap:
          name: registry-configmap
          items:
          - key: registry-config.yml
            path: config.yml
      - name: htpasswd
        secret:
          secretName: registry-auth
          items:
          - key: HTPASSWD
            path: htpasswd


---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
spec:
  selector:
    app: registry
  type: NodePort
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
    nodePort: 32000
    protocol: TCP

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations: {}
  name: registry-gateway
  namespace: docker-registry
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 32000 
      name: http
      protocol: HTTP
    hosts:
    - "registry.multienvlabs.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations: {}
  name: registry-virtualservice
  namespace: docker-registry
spec:
  hosts:
  - "registry.multienvlabs.com"
  gateways:
  - registry-gateway
  http:
  - route:
    - destination:
        host: registry-service.docker-registry.svc.cluster.local
        port:
          number: 5000
